--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
         "ext-ffi": "*"
     },
     "license": [
-        "RPL-1.5",
-        "proprietary"
+        "MIT"
     ],
     "authors": [
         {
