--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -53,4 +53,4 @@ jobs:
         run: "composer install --no-interaction --no-progress --no-suggest"
 
       - name: "Tests"
-        run: "vendor/bin/phpunit"
+        run: "XDEBUG_MODE=coverage vendor/bin/phpunit"
