Generate constants from source code

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,10 @@
     "autoload": {
         "psr-4" : {
             "ZEngine\\" : "src/"
-        }
+        },
+        "files": [
+            "include/constants.php"
+        ]
     },
     "autoload-dev": {
         "psr-4" : {
